# sdl3-demo

./: .gitignore  CMakeLists.txt  README.md  build_linux.sh  build_win.ps1
.github/workflows/: release.yml
build_linux/: CMakeCache.txt  Makefile  cmake_install.cmake  sdl3-demo
sdl3-demo/: sdl3-demo.cpp  sdl3-demo.cpp.backup  timer.h
sdl3-demo/sdl3-demo/: CMakeLists.txt  LeakTracker.hpp  animation.h  gameobject.h
